<resources>
    <string name="app_name">Oigame</string>
    <string name="rules">Правила</string>
    <string name="main_menu_start">Начать</string>
    <string name="main_menu_button_rules">Правила</string>

    <string name="registration_name_request">Введи свое имя, по братски</string>
    <string name="registration_name_example">Твое имя</string>
    <string name="registration_button_name_setting">Ну что, погнали</string>
    <string name="registration_text_hello">Салам," "</string>

    <string name="profile_text_default_score">Ты еще ничего не набрал</string>
    //тут имеется суммарное колво набранных очков ever
    <string name="profile_text_name_score">твой счет</string>
    <string name="profile_text_default_name">Алеша</string>
    <string name="tv_profile_victory_count_default">0</string>
    <string name="tv_profile_text_name_victory_count">побед</string>
    <string name="profile_button_sign_out">Сменить имя</string>
    <string name="profile_button_reset_score">Сбросить свои очки</string>
    <string name="profile_button_score_reset_notification">Ты сбросил свои очки!</string>
    <string name="profile_text_place_in_rating">место в рейтинге</string>


    <string name="final_text"></string>

    <string name="game_text_music_notification">Играет музыкальный отрывок, просим вас включить звук</string>
    <string name="game_text_no_file_exception">Данного файла не существует</string>
    <string name="game_text_wrong_siq_exception">Не подходящий siq файл</string>
    <string name="game_text_wrong_xml_structure">Не правильная структура xml файла</string>

    <string name="pack_setting_text_select_pack">Выберите пак вопросов</string>
    <string name="pack_setting_text_you_have_set_a_pack">Вы выбрали набор: %1$s</string>
    <string name="pack_setting_text_pack1">GTA</string>
    <string name="pack_setting_text_pack1_file">limpGTA.siq</string>
    <string name="pack_setting_text_pack3">Funny</string>
    <string name="pack_setting_text_pack3_file">limpFunny.siq</string>
    <string name="pack_setting_text_pack5">Games</string>
    <string name="pack_setting_text_pack5_file">limpGames.siq</string>
    <string name="pack_setting_text_custom">Выбрать свой</string>
    <string name="pack_setting_text_custom_notification">Свой собственный</string>
    <string name="pack_setting_text_start">Продолжить</string>


    <string name="sm_button_single">Одиночная</string>
    <string name="sm_button_multi">С друзьями</string>
    <string name="sm_text_choose_pack">Сначала тебе нужно выбрать пакет с категориями для игры
    в зависимости от того, что ты предпочитаешь, и загрузить</string>
    <string name="sm_button_choose_pack">Выбрать</string>
    <string name="sm_button_user_isChoose">Готово!</string>
    <string name="settings_text">Настройки</string>
    
    <string name="settings_text_link">https://vladimirkhil.com/si/storage</string>
    <string name="link">Скачать свои паки\n<a href="https://vladimirkhil.com/si/storage">https://vladimirkhil.com/si/storage</a></string>


    <string name="help_text_info">
        Oigame - интеллектуальная викторина. Играть можно как одному, так и с друзями!Правила просты:
        \n\nСначала игрок выбирает пакет с категориями игры, которые устанавливаются вместе с игрой,
        либо же вы можете скачать любой понравившийся из сайта. В настройках вы с легкостью можете на него перейти.
        \n\nЕсли вы захотели сыграть с установленным пакетом, вам нужно будет выбрать его среди
        недавно установленных файлов в вашем проводнике/документах, куда вас перекинет сразу же
        после нажатия кнопки "выбрать свой" в окне выбора пакетов. Для удобного поиска рекомендуем
        поставить фильтр ваших файлов на "показать новые" или "по дате изменений" в зависимости от устройства.
        \n\nПосле выбора пакета, вам предоставляется выбор одиночной игры и многопользовательской.
        \n\n\n\nИгра с ботом:\n
        У каждого игрока имеется свой персональный счет.
    В начале игры у вас и у бота по 0 очков.\n\n
        Далее игрок выбирает вопрос из игрового табло. Табло нужно прокручивать,
        для того чтобы увидеть все категории и все ячейки!
    Каждый вопрос имеет себестоимость в зависимости от сложности. Вопрос может быть текстовым, аудио,
        либо же изображением\n\n
        Нужно выбрать сложность игры: легкий, средний, сложный, и затем игра начинается.
        После выбора вопроса дается несколько секунд на размышление. Если вы знаете ответ - нажимайте кнопку "Есть ответ!".
        Чем сложнее выбранный уровень, тем больше вероятности, что бот решит отвечать - тем меньше времени вам подумать.
        \nЕсли же никто не захочет отвечать - вопрос пропускается, и игра продолжается.
        \nЕсли отвечает бот, вам нужно подождать,
        пока бот даст ответ, который может быть как правильным, так и неправильным.
        Опять - таки, чем сложнее уровень, тем с большей вероятностью бот ответит правильно.
        \nЕсли же отвечаете вы - у вас есть время ввести ответ в поле и отправить свой ответ.\n\n
        У вас есть возможность воспользоваться подсказками(см.ниже) в случае затруднения, если у вас хватает очков на общем счету.
        После отправки ответа перед вами выводится окно с правильным ответом и встает выбор: честно сравнить свой введенный ответ с настоящим,
        поступить по совести,выбрав "правильно" или "неправильно", и сыграть с ботом достойную игру;
        либо же сжульничать и одержать нечестную победу в игре с ботом, который очень старается и которому будет обидно :(
        (и нам тоже, ведь мы его создавали не для этого).\n\n
        Таким образом, игра продолжается до тех пор, пока не закончатся все вопросы.
        Набравший большее количество очков становится победителем.
        \nПо результатам игры, вам начисляются очки в общий счет(который отображается в профиле),
        умноженный на коэффициент(который зависит от выбранной сложности).Также в профиле видны количества ваших побед.
        \nПриятной игры!\n\n\n\n


        Игра с друзьями: \n
        Находится в разработке :) \n\n\n\n
        Подсказки:\n\n
        Бонусы, позволяющие облегчить себе игру. У каждой подсказки есть стоимость, которая вычитается из общего счета.
        Он отображается у игрока в профиле. Если у вас недостаточно средств - подсказки не для вас.
        Придется думать самому.\n\n
    </string>
    <string name="help_hintTextChar">Данная подсказка позволяет получить один символ из ответа: сначала первый, а затем при повторном использовании будут открыты последующие символы.
        \nСтоимость: 500\n\n\n\n </string>
    <string name="botHelp">Данная подсказка позволяет позвонить боту, который с определённым шансом может дать как правильный, так и неправильный ответ.
    \nСтоимость: 800\n\n\n\n</string>
    <string name="btn_darkTheme">Сменить тему</string>
</resources>
