<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

<!--    "sans-serif-condensed-medium"-->

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textSize="45sp"
        android:gravity="center_horizontal|center_vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btn_main_menu_start"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="154sp"
        android:layout_height="69sp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/main_menu_start"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/btn_main_menu_rules"
        android:layout_width="154sp"
        android:layout_height="69sp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/main_menu_button_rules"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_menu_start"
        app:layout_constraintVertical_bias="0.100000024"

        />

    <ImageView
        android:id="@+id/iv_main_menu_profile"
        android:layout_width="48dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/tv_profile_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/person_black_18dp" />

    <ImageView
        android:id="@+id/iv_main_menu_settings"
        android:layout_width="48sp"
        android:layout_height="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_profile_name"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/settings_black_18dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
